--- a/src/app/components/ad-creating/ad-creating.component.html
+++ b/src/app/components/ad-creating/ad-creating.component.html
@@ -54,8 +54,7 @@
               <ngx-dadata class="add-form__address" 
                 formControlName="address"
                 [config]="config"
-                (selected)="onAddressSelected($event)
-                " (input)="onAddressChange()"
+                (selected)="onAddressSelected($event)"
               ></ngx-dadata>
             
             </div>
