--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -9,23 +9,26 @@
   display: flex;
   justify-content: space-between;
   height: 50px;
+  margin-bottom: 40px;
   &__bg {
     background-color: #ffffff;
     box-shadow: 0px 0px 130px 10px rgba(0, 0, 0, 0.2);
   }
-}
 
-.navbar__section {
-  div{
+  &__section {
+    div{
+      display: flex;
+      align-items: center;
+    }
     display: flex;
     align-items: center;
-  }
-  display: flex;
-  align-items: center;
-  a {
-    padding-right: 15px;
+    a {
+      padding-right: 15px;
+    }
+  
   }
 }
+
 
 
 
@@ -45,7 +48,6 @@
 .search__section{
   max-width: 1000px;
   margin:0 auto;
-  margin-top: 40px;
   margin-bottom: 70px;
   
   display: flex;
