--- a/src/app/components/profile/profile.component.scss
+++ b/src/app/components/profile/profile.component.scss
@@ -6,8 +6,9 @@
   &__avatar {
 
     &-img{
-      max-width: 250px;
-      max-height: 250px;
+      width: 250px;
+      height: 250px;
+      object-fit: cover;
       border-radius: 50%;
       margin-bottom: 35px;
     }
@@ -38,4 +39,8 @@
   nz-form-item {
     display: block;
   }
+}
+
+nz-upload {
+  text-align: center;
 }
