--- a/src/app/components/auth/auth.component.scss
+++ b/src/app/components/auth/auth.component.scss
@@ -1,6 +1,19 @@
 .auth {
   height: calc(100vh - 50px);
   position: relative;
+  &__nav {
+    border-radius: 15px;
+    padding: 15px;
+    position: absolute;
+    top: 15px;
+    left: 15px;
+    text-align: center;
+    box-shadow: 0px 0px 80px 0px rgba(0, 0, 0, 0.2);
+    a {
+      padding: 15px;
+    }
+  }
+
   &-form{
     height: 400px;
     display: flex;
@@ -40,9 +53,9 @@
 
 .spinner{
   top: 50%;
-      bottom: 0;
-      margin: auto;
-      transform: translateY(-50%);
+  bottom: 0;
+  margin: auto;
+  transform: translateY(-50%);
 }
 
 
