--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,6 +6,7 @@
 $nunitoFont: 'Nunito', sans-serif;
 $readexFont: 'Readex Pro', sans-serif;
 $montserratFont: 'Montserrat', sans-serif;
+$box-shadow: 0px 0px 20px 10px rgba(0, 0, 0, 0.05);
 
 
 body {
