--- a/src/app/components/ad-full/ad-full.component.scss
+++ b/src/app/components/ad-full/ad-full.component.scss
@@ -127,11 +127,12 @@
   }
 
   &-number {
-    font-size: 16px;
+    font-size: auto;
     height: 50px;
     max-width: inherit;
     width: 100%;
-    align-items: center;
+    padding: 0;
+    text-align: center;
     margin-bottom: 20px;
   }
   &-chat {
