--- a/src/app/components/profile-ads/profile-ads.component.html
+++ b/src/app/components/profile-ads/profile-ads.component.html
@@ -1,26 +1,45 @@
-
-    <div class="ads">
-      <div *ngIf="!(loadingService.isLoading$ | async); else loading">
+<div class="ads">
+  <div *ngIf="!(loadingService.isLoading$ | async); else loading">
+    <div *ngIf="ads.length > 0; else noAds">
       <div *ngFor="let ad of ads">
-        <div class="ad" routerLink="{{ad.id}}">
+        <div class="ad" >
           <nz-carousel class="ad__carousel" [nzEnableSwipe]="false">
             <div nz-carousel-content *ngFor="let image of ad.images">
-              <img  class="advertisement-image" src="{{image}}" >
+              <img nzIcon="user" class="advertisement-image" src="{{ image }}" />
             </div>
           </nz-carousel>
-          <div class="ad__description">
-            <p class="ad__description-title">{{ ad.name }}</p>
-            <p class="ad__description-price">{{ ad.price | currency: 'RUB':'symbol-narrow':'1.0-0':'ru-RU'}}</p>
-        
+          <div class="ad__secWrapper">
+            <div class="ad__description">
+              <p class="ad__description-title">{{ ad.name }}</p>
+              <p class="ad__description-price">
+                {{
+                  ad.price
+                    | currency : "RUB" : "symbol-narrow" : "1.0-0" : "ru-RU"
+                }}
+              </p>
+            </div>
+            <div class="ad__nav">
+              <button class="ad__nav__btn" nz-button nz-popover nzType="text" nzPopoverContent="Перейти к объявлению" routerLink="/advertisements/{{ ad.id }}"><span class="ad__nav__img" nz-icon nzType="info-circle" nzTheme="outline"></span></button>
+              <button class="ad__nav__btn" nz-button nz-popover nzType="text" nzPopoverContent="Редактировать объявление" ><span class="ad__nav__img" nz-icon nzType="edit" nzTheme="outline"></span></button>
+              <button class="ad__nav__btn" nz-button nz-popover nzType="text" nzPopoverContent="Удалить объявление" (click)="showDeleteConfirm(ad.id)"><span class="ad__nav__img" nz-icon nzType="delete" nzTheme="outline"></span></button>
+              
+            </div>
+
           </div>
         </div>
-
-
       </div>
     </div>
   </div>
-
+</div>
 
 <ng-template #loading>
-  <app-spinner></app-spinner>
+  <app-spinner class="spinner"></app-spinner>
+</ng-template>
+
+<ng-template #noAds>
+  <div class="empty__wrapper">
+    <span class="empty__img" nz-icon nzType="meh" nzTheme="outline"></span>
+    <div class="empty__text">Здесь пока пусто</div>
+    <a nz-button nzType="primary" routerLink="../../add-new-ad">Разместить объявление </a>
+  </div>
 </ng-template>
