--- a/src/app/components/profile-ads/profile-ads.component.scss
+++ b/src/app/components/profile-ads/profile-ads.component.scss
@@ -5,6 +5,8 @@
   box-shadow: $box-shadow;
   border-radius: 15px;
   padding: 30px;
+  min-height: 450px;
+  text-align: center;
 }
 
 .ad {
@@ -16,22 +18,37 @@
   border-radius: 15px;
   margin: 0 auto 30px;
   display: flex;
+  transition: .3s;
+
+  &:hover {
+    cursor: pointer;
+    border-color: #1890ff;
+  }
 
 
   &__carousel {
     max-height: 200px;
     max-width: 250px;
-    background-color: #ddd0d0;
+    background-color: rgba(119, 118, 118, 0.671);
     border-top-left-radius: 15px;
     border-bottom-left-radius: 15px;
+    z-index: 1000;
     
+  }
+
+  &__secWrapper {
+    max-width: 350px;
+    width: 100%;
+    padding: 0px 15px;
+    display: flex;
+    justify-content: space-between;
   }
   &__description{
     padding: 5px;
     display: flex;
     flex-direction: column;
-
-
+    align-items: flex-start;
+    text-align: left;
 
     &-title {
       font-size: 16px;
@@ -43,6 +60,25 @@
     }
 
   }
+
+  &__nav {
+    margin-top: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+
+    &__btn {
+      
+    }
+
+    &__img {
+      font-size: 20px;
+      transition: .3s;
+      &:hover {
+        color: $defaultColor;
+      }
+    }
+  }
 }
 
 .advertisement-image {
@@ -51,4 +87,31 @@
   object-fit: contain;
   display: block;
   margin: auto;
+}
+
+.empty{
+  &__wrapper {
+    display: flex;
+    height: 400px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  &__img {
+    font-size: 24px;
+    margin: 10px;
+  }
+
+  &__text {
+    margin: 10px;
+  }
+}
+
+.spinner {
+  margin-top: 250px;
+}
+
+nz-modal {
+  border-radius: 15px;
 }
