--- a/src/app/components/ad/ad.component.scss
+++ b/src/app/components/ad/ad.component.scss
@@ -1,34 +1,41 @@
-.cards {
-  display: grid;
-  grid-template-columns: 33% 33% 33%;
-  
-}
+@import '/src/styles.scss';
 
-.card {
-  max-width: 250px;
+.ad {
+  max-width: 200px;
   width: 100%;
   max-height: 350px;
   height: 100%;
-  border: 1px solid #d9d9d9;
-  border-radius: 20px;
-
+  
   &__carousel {
     max-height: 200px;
-    max-width: 250px;
+    max-width: 200px;
     background-color: #ddd0d0;
-    border-top-left-radius: 20px;
-    border-top-right-radius: 20px;
+    border-radius: 20px;
   }
   &__description{
     padding: 5px;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-
+    
+    &-header {
+      display: flex;
+      justify-content: space-between;
+    }
 
 
     &-title {
       font-size: 16px;
+      font-weight: 500;
+      color: $defaultColor;
+      overflow: hidden;
+   text-overflow: ellipsis;
+   display: -webkit-box;
+   -webkit-line-clamp: 2; /* number of lines to show */
+           line-clamp: 2; 
+   -webkit-box-orient: vertical;
+      &:hover {
+        font-weight: 600;
+      }
     }
   
     &-price {
@@ -36,13 +43,24 @@
       font-weight: 600;
     }
 
+    &-city {
+      color: #808080;
+    }
+
+    &-date {
+      color: #808080;
+    }
+
   }
 }
 
 .advertisement-image {
 
-  height: 200px;
-  object-fit: contain;
+  width: 200px;
+  height: 250px;
+  object-fit: cover;
+  object-position: center;
+
   display: block;
   margin: auto;
 }
