--- a/src/app/components/profile-ads/profile-ads.component.scss
+++ b/src/app/components/profile-ads/profile-ads.component.scss
@@ -7,6 +7,17 @@
   padding: 30px;
   min-height: 450px;
   text-align: center;
+  position: relative;
+
+  &__pagination {
+    position: absolute;
+    bottom: 20px;
+    right: 0;
+    left: 0;
+    &__pre {
+      height: 25px;
+    }
+  }
 }
 
 .ad {
@@ -14,30 +25,21 @@
   width: 100%;
   max-height: 200px;
   height: 100%;
-  border: 1px solid #d9d9d9;
-  border-radius: 15px;
   margin: 0 auto 30px;
   display: flex;
   transition: .3s;
 
-  &:hover {
-    cursor: pointer;
-    border-color: #1890ff;
-  }
-
 
   &__carousel {
     max-height: 200px;
-    max-width: 250px;
+    max-width: 200px;
     background-color: rgba(119, 118, 118, 0.671);
-    border-top-left-radius: 15px;
-    border-bottom-left-radius: 15px;
-    z-index: 1000;
+    border-radius: 15px;
     
   }
 
   &__secWrapper {
-    max-width: 350px;
+    max-width: 400px;
     width: 100%;
     padding: 0px 15px;
     display: flex;
@@ -52,6 +54,10 @@
 
     &-title {
       font-size: 16px;
+      font-weight: 500;
+      &:hover{
+        font-weight: 600;
+      }
     }
   
     &-price {
@@ -82,11 +88,13 @@
 }
 
 .advertisement-image {
-
   height: 200px;
-  object-fit: contain;
+  width: 200px;
+  object-fit: cover;
+  object-position: center;
   display: block;
   margin: auto;
+  border-radius: 15px;
 }
 
 .empty{
@@ -106,6 +114,12 @@
   &__text {
     margin: 10px;
   }
+}
+
+.divider {
+  border-top: 1px solid #d4d4d4;
+  margin-top: -15px;
+  margin-bottom: 15px;
 }
 
 .spinner {
