--- a/src/app/components/profile-data/profile-data.component.scss
+++ b/src/app/components/profile-data/profile-data.component.scss
@@ -1,11 +1,12 @@
 .profile {
+
   &__form {
     border-radius: 15px;
     box-shadow: 0px 0px 20px 10px rgba(0, 0, 0, 0.05);
     max-width: 700px;
     width: 100%;
     padding: 30px;
-
+    min-height: 450px;
     &__title {
       font-size: 24px;
       font-weight: 600;
