--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -1,8 +1,8 @@
 <div class="container">
   <div class="profile">
     <div class="profile__avatar">
-      <!-- <img class="profile__avatar-img" src="{{ user$.avatar }}" /> -->
-      <nz-avatar class="profile__avatar-img" [nzSize]="250" nzSrc="{{ user$.avatar }}" nzIcon="user"></nz-avatar>
+      
+      <nz-avatar class="profile__avatar-img" [nzSize]="250" nzSrc="{{ user$.avatar }}" nzIcon="user" nzFallback=""></nz-avatar>
       <nz-upload
         nzAction="{{environmentUrl}}/v1/image/create"
         (nzChange)="handleChange($event)"
@@ -12,8 +12,8 @@
         <button nz-button><span nz-icon nzType="upload"></span>Изменить фотографию</button>
       </nz-upload>
       <div class="profile__nav">
-        <a class="profile__nav__element" (click)="component = 'data'" >Данные</a>
-        <a class="profile__nav__element" (click)="component = 'advertisements'" >Мои объявления</a>
+        <a class="profile__nav__element" routerLink="/profile/{{user$.id}}" [queryParams]="{component: 'data'}" >Данные</a>
+        <a class="profile__nav__element" routerLink="/profile/{{user$.id}}" [queryParams]="{component: 'advertisements'}" >Мои объявления</a>
         <a class="profile__nav__element" href="">Избранное</a>
       </div>
 
