--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -13,10 +13,10 @@
           </a>
           <nz-dropdown-menu #menu="nzDropdownMenu" >
             <ul nz-menu nzSelectable>
-              <li nz-menu-item nzDisabled>{{ user.name }}</li>
+              <li nz-menu-item routerLink="profile/{{user.id}}" [queryParams]="{component: 'data'}">{{ user.name }}</li>
               <li nz-menu-divider></li>
               <li nz-menu-item routerLink="add-new-ad">Разместить объявление</li>
-              <li nz-menu-item routerLink="profile/{{user.id}}" [queryParams]="{component: 'data'}">Профиль</li>
+              <li nz-menu-item >Избранное</li>
               <li nz-menu-item routerLink="profile/{{user.id}}" [queryParams]="{component: 'advertisements'}">Мои объявления</li>
             </ul>
           </nz-dropdown-menu>
