Верстка страницы ИЗБРАННОЕ.

--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -14,13 +14,14 @@
       <div class="profile__nav">
         <a class="profile__nav__element" routerLink="/profile/{{user$.id}}" [queryParams]="{component: 'data'}" >Данные</a>
         <a class="profile__nav__element" routerLink="/profile/{{user$.id}}" [queryParams]="{component: 'advertisements'}" >Мои объявления</a>
-        <a class="profile__nav__element" href="">Избранное</a>
+        <a class="profile__nav__element" routerLink="/profile/{{user$.id}}" [queryParams]="{component: 'favorites'}">Избранное</a>
       </div>
 
     </div>
     <div class="profile__content" [ngSwitch]="component">
       <div *ngSwitchCase="'data'"><app-profile-data [user]="user$"></app-profile-data></div>
       <div *ngSwitchCase="'advertisements'"><app-profile-ads [user]="user$"></app-profile-ads></div>
+      <div *ngSwitchCase="'favorites'"><app-profile-favorites [user]="user$"></app-profile-favorites></div>
     
     </div>
     
