--- a/src/styles.scss
+++ b/src/styles.scss
@@ -97,3 +97,10 @@ li {
 .ant-upload-list-item-thumbnail img {
   border-radius: 10px!important;
 }
+
+.ant-dropdown-menu,
+.ant-dropdown-menu-root,
+.ant-dropdown-menu-light,
+.ant-dropdown-menu-vertical {
+  border-radius: 15px!important;
+}
