--- a/src/app/components/profile-favorites/profile-favorites.component.html
+++ b/src/app/components/profile-favorites/profile-favorites.component.html
@@ -1,7 +1,8 @@
 <div class="ads">
   <div *ngIf="!(loadingService.isLoading$ | async); else loading">
     <div *ngIf="ads.total > 0; else noAds">
-      <div *ngFor="let ad of ads.items">
+      <div *ngFor="let ad of ads.items; let i = index">
+        <div *ngIf="!ad.deleted">
         <div class="ad" >
           <div *ngIf="ad.images.length > 0; else noImages">
           <nz-carousel class="ad__carousel" [nzEnableSwipe]="false">
@@ -25,14 +26,7 @@
               <p class="ad__description-date">{{ ad.dateTimeCreated }}</p>
             </div>
             <div class="ad__nav">
-              <button class="ad__nav__btn" nz-button nzType="text" nz-tooltip nzTooltipTitle="Перейти к объявлению" routerLink="/advertisements/{{ ad.id }}"><span class="ad__nav__img" nz-icon nzType="info-circle" nzTheme="outline"></span></button>
-              <button class="ad__nav__btn" nz-button nzType="text" nz-tooltip nzTooltipTitle="Редактировать объявление" routerLink="/advertisements/editing/{{ ad.id }}" ><span class="ad__nav__img" nz-icon nzType="edit" nzTheme="outline"></span></button>
-              <button class="ad__nav__btn" nz-button nzType="text" nz-tooltip nzTooltipTitle="Удалить объявление" (click)="showModal()"><span class="ad__nav__img" nz-icon nzType="delete" nzTheme="outline"></span></button>
-              <nz-modal nzCentered [(nzVisible)]="isVisible" nzTitle="Вы действительно хотите удалить объявление?" (nzOnCancel)="handleCancel()" (nzOnOk)="handleOk(ad.id)" nzOkText="Да" nzCancelText="Нет">
-                <ng-container *nzModalContent>
-                  <p>Данное действие нельзя будет отменить.</p>
-                </ng-container>
-              </nz-modal>
+              <a (click)="deleteFromFavorite(ad.id, i)"><span style="font-size: 18px; margin-left: 20px" nz-icon nzType="heart" nzTheme="fill"></span></a>
               
             </div>
 
@@ -40,9 +34,10 @@
         </div>
         <div class="divider"></div>
       </div>
+      </div>
+      <div class="ads__pagination__pre"></div>
+      <nz-pagination class="ads__pagination" [nzPageIndex]="pageNumber" [nzPageSize]="pageSize" [nzTotal]="adsTotal" (nzPageIndexChange)="onChangePagination($event)"></nz-pagination>
     </div>
-    <div class="ads__pagination__pre"></div>
-    <nz-pagination class="ads__pagination" [nzPageIndex]="pageNumber" [nzPageSize]="pageSize" [nzTotal]="adsTotal" (nzPageIndexChange)="onChangePagination($event)"></nz-pagination>
   </div>
 </div>
 
@@ -57,7 +52,7 @@
   <div class="empty__wrapper">
     <span class="empty__img" nz-icon nzType="meh" nzTheme="outline"></span>
     <div class="empty__text">Здесь пока пусто</div>
-    <a nz-button nzType="primary" routerLink="../../add-new-ad">Разместить объявление </a>
+    <a nz-button nzType="primary" routerLink="../../advertisements">Искать объявления</a>
   </div>
 </ng-template>
 
