--- a/src/styles.scss
+++ b/src/styles.scss
@@ -57,7 +57,7 @@ li {
 .search {
   background-color: #fff!important;
   border: 1px solid #d9d9d9!important;
-  border-radius: 10px!important;
+  border-radius: 15px!important;
 }
 
 .search:focus {
@@ -102,5 +102,10 @@ li {
 .ant-dropdown-menu-root,
 .ant-dropdown-menu-light,
 .ant-dropdown-menu-vertical {
+  border-radius: 15px!important;
+}
+
+ngx-dadata{
+  width: 150px !important;
   border-radius: 15px!important;
 }
