--- a/src/app/components/search-ads/search-ads.component.scss
+++ b/src/app/components/search-ads/search-ads.component.scss
@@ -1,9 +1,38 @@
+@import '/src/styles.scss';
+
 .ads {
+  width: 700px;
   display: grid;
-  grid-template-columns: 25% 25% 25% 25%;
-  grid-row-gap: 50px;
+  grid-template-columns: repeat(3, 1fr);
+  grid-row-gap: 10px;
 }
 
 .ad {
   margin-bottom: 25px;
+}
+
+.search-ads {
+  display: flex;
+  justify-content: space-between;
+  &__filters {
+    max-width: 200px;
+    width: 100%;
+    margin-right: 50px;
+    &__form {
+      padding: 15px;
+      border-radius: 15px;
+      box-shadow: $box-shadow;
+      height: 200px;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      
+    }
+  }
+}
+
+.title {
+  font-size: 30px;
+  font-weight: 600;
+  margin-bottom: 20px;
 }
